# NamedPipeDemo

./: .clang-format  CASES  CMakeLists.txt  IMPROVEMENTS  README.md  TODO
client/: CMakeLists.txt  ClassRepository.cpp  ClassRepository.h  Client.cpp  Client.h  ClientRequest.cpp  ClientRequest.h  DemoSimulator.cpp  DemoSimulator.h  IDataSource.h  Pipe.cpp  Pipe.h  ResponseParser.cpp  ResponseParser.h  main.cpp
common/: CMakeLists.txt  CustomClass.cpp  CustomClass.h  DataDeserializer.cpp  DataDeserializer.h  DataSerializer.cpp  DataSerializer.h  Logger.cpp  Logger.h  Types.h
server/: CMakeLists.txt  ClassRegistry.h  CustomClassParser.cpp  CustomClassParser.h  PipeInstance.cpp  PipeInstance.h  RequestParser.cpp  RequestParser.h  Server.cpp  Server.h  ServerResponse.cpp  ServerResponse.h  main.cpp
